# decorapy

./: README.md  pyproject.toml
examples/: demo.py
